# 223-cube-solver

./: CMakeLists.txt  README.md  basic_settings.json  full_settings.json  settings.json
include/: API.h  bfs_solver.h  cube_solver.h  dfs_solver.h  move.h  utils.h
src/: bfs_solver.c  cube_solver.c  dfs_solver.c  main.c  move.c  utils.c
